app-de-test-2/angular-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: online-boutique-frontend
  namespace: test
  labels:
    app: online-boutique-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: online-boutique-frontend
  template:
    metadata:
      labels:
        app: online-boutique-frontend
    spec:
      containers:
      - name: frontend
        image: gcr.io/google-samples/microservices-demo/frontend:v0.9.0
        ports:
        - containerPort: 8080
