app-de-test-2/boutique-azure-cert.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boutique-ingress
  namespace: test
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true" 
spec:
  ingressClassName: nginx 
  tls:
  - hosts:
    - rasleneboutique.duckdns.org
    secretName: boutique-tls-prod
  rules:
  - host: rasleneboutique.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: online-boutique-frontend-service
            port:
              number: 80
