app-de-test-2/boutique-ingress-prod-azure.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boutique-ingress
  namespace: test 
spec:
  ingressClassName: nginx 
  rules:
  - host: rasleneboutique.duckdns.org 
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: online-boutique-frontend-service 
            port:
              number: 80
