app-de-test-2/boutique-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boutique-ingress
  namespace: test # ⬅️ IMPORTANT : C'EST LE NAMESPACE DE TON APP
spec:
  ingressClassName: nginx 
  rules:
  - host: boutique.kube.local # ⬅️ Le nom de domaine que tu as mis dans ton hosts
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: online-boutique-frontend-service 
            port:
              number: 80 # ⬅️ Port de ton service
