app-de-test-2/ingress-tls-encrypt.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boutique-ingress
  namespace: test
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx 
  tls:
  - hosts:
    - 192-168-216-151.nip.io # ⬅️ REMPLACE PAR $DOMAIN_NAME_PROD.nip.io
    secretName: boutique-tls-prod
  rules:
  - host: 192-168-216-151.nip.io # ⬅️ REMPLACE PAR $DOMAIN_NAME_PROD.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: online-boutique-frontend-service
            port:
              number: 80
